# zipline.py

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  lint.yml  publish_release.yml
docs/: cli.rst  conf.py  index.rst  modules.rst  zipline.rst
examples/: basic_usage.py  creating_users.py  discord_bot_integration.py  import_files.py  tagging_files.py  uploading_files.py  using_folders.py
zipline/: __init__.py  client.py  color.py  enums.py  errors.py  http.py  meta.py  models.py  utils.py
zipline/cli/: asynctyper.py  entrypoint.py  sync.py
zipline/cli/commands/: __init__.py  _handling.py  shorten.py  upload.py  version.py
